Add support for jmod and jlink in standard assembler.